@@ -1,6 +1,15 @@
 # happycommunity
 
 springboot
+
 dubbo
+
 mybatis
+
 logback
+
+
+```
+nohup java -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms1024m -Xmx1024m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC -jar **.jar
+
+```
